--- a/_posts/Movies/2021-08-18-Movie-怒火重案.markdown
+++ b/_posts/Movies/2021-08-18-Movie-怒火重案.markdown
@@ -5,7 +5,7 @@ subtitle:   " \"Hello World, Hello Blog\""
 date:       2021-08-09 14:18
 author:     "Xiaohan"
 header-img: "img/post-bg-os-metro.jpg"
-category: Music
+category: Movies
 catalog: true
 tags:
     - 怒火·重案 陈木胜
