--- a/_posts/Movies/2021-08-18-Movie-怒火重案.markdown
+++ b/_posts/Movies/2021-08-18-Movie-怒火重案.markdown
@@ -1,7 +1,7 @@
 ---
 layout:     post
 title:      "观影记一"
-subtitle:   " \"Hello World, Hello Blog\""
+subtitle:   " \"灰色地带\""
 date:       2021-08-09 14:18
 author:     "Xiaohan"
 header-img: "img/post-bg-os-metro.jpg"
