--- a/_posts/Movies/2021-08-18-Movie-怒火重案.markdown
+++ b/_posts/Movies/2021-08-18-Movie-怒火重案.markdown
@@ -14,25 +14,7 @@ tags:
 
 > 世上本就没有非黑即白的事情，就像是电车问题没有最优解一样，站在不同人的立场上，自然有不同的选择。
 
-<!-- <audio id="audio" controls="" preload="none">
-      <source id="mp3" src="mp3/schwifty.mp3">
-      <embed height="50" width="100" src="horse.mp3">
-</audio> -->
-
-<iframe height=500 width=500 src="/_posts/Movies/nuhuo.jpg"></iframe>
-
-<!-- <iframe src="//player.bilibili.com/player.html?aid=800489596&bvid=BV1Xy4y1q79A&cid=260564493&page=1" scrolling="no" border="0" frameborder="no" framespacing="0" allowfullscreen="true"> </iframe>
-<script>
-function changeFrameHeight(){
-	var ifm= document.getElementById("myiframe");
-	ifm.height=document.documentElement.clientHeight;
-
-}
-window.onresize=function(){  
-	 changeFrameHeight();  
-} 
-</script> -->
-
+<iframe height=500 width=500 src="_posts/Movies/nuhuo.jpg"></iframe>
 
 ### 记事
 
