--- a/_posts/Movies/2021-08-18-Movie-怒火重案.markdown
+++ b/_posts/Movies/2021-08-18-Movie-怒火重案.markdown
@@ -14,8 +14,8 @@ tags:
 
 > 世上本就没有非黑即白的事情，就像是电车问题没有最优解一样，站在不同人的立场上，自然有不同的选择。
 
-<iframe height=500 width=500 src="_posts/Movies/nuhuo.jpg"></iframe>
-
+[comment]: <> (<iframe height=500 width=500 src="_posts/Movies/nuhuo.jpg"></iframe>)
+![]("_posts/Movies/nuhuo.jpg)
 ### 记事
 
 观影于2021年8月14日
