--- a/_posts/Movies/2021-08-29-Movies-失控玩家.markdown
+++ b/_posts/Movies/2021-08-29-Movies-失控玩家.markdown
@@ -28,7 +28,7 @@ tags:
 <br>
 另外关于人工智能的自助进化来说，NPC推荐荒野大镖客2（游戏），虽然没有玩过，但是是一部有时间的话，真的要好好玩的游戏，看NPC的生活的一天。
 
-感觉又向着伦理的方向出发了，人工智能的生命是否是受人类所掌控的呢？还是可以成为有自由意识但可以脱离实体的自由状态呢？是否能达到[第二境界][https://yangxiaohan0120.github.io/music/2021/08/12/Music-schwifty/]。
+感觉又向着伦理的方向出发了，人工智能的生命是否是受人类所掌控的呢？还是可以成为有自由意识但可以脱离实体的自由状态呢？是否能达到[第二境界](https://yangxiaohan0120.github.io/music/2021/08/12/Music-schwifty/)。
 
 ### 游戏
 <br>
