--- a/_posts/Music/2021-11-28-Music-豪华轿车.markdown
+++ b/_posts/Music/2021-11-28-Music-豪华轿车.markdown
@@ -15,51 +15,32 @@ tags:
 
 > yeah~~get schwifty
 
-<!-- <audio id="audio" controls="" preload="none">
-      <source id="mp3" src="mp3/schwifty.mp3">
-      <embed height="50" width="100" src="horse.mp3">
-</audio> -->
+<iframe 
+src="//player.bilibili.com/player.html?aid=721821552&bvid=BV1AS4y1R7Xu&cid=445420771&page=1" 
+scrolling="no" 
+border="0" 
+frameborder="no" 
+framespacing="0" 
+allowfullscreen="true" 
+height=450 
+width=600> 
+</iframe>
 
+### 歌词摘录
 
-<iframe src="//player.bilibili.com/player.html?aid=800489596&bvid=BV1Xy4y1q79A&cid=260564493&page=1" scrolling="no" border="0" frameborder="no" framespacing="0" allowfullscreen="true"> </iframe>
-<script>
-function changeFrameHeight(){
-	var ifm= document.getElementById("myiframe");
-	ifm.height=document.documentElement.clientHeight;
-
-}
-window.onresize=function(){  
-	 changeFrameHeight();  
-} 
-</script>
-
-
-### 由来
-
-这首歌来自于我最喜欢的美漫《瑞克与莫蒂》第二季的第五集。
-
-瑞克姥爷和莫蒂在向外星巨石做演唱表演。整场气氛超级嗨。
-
-It's time to schwifty in here.
-
+![](https://github.com/Yangxiaohan0120/Yangxiaohan0120.github.io/blob/main/img/in-post/limosine/lyric1.png)
+![](https://github.com/Yangxiaohan0120/Yangxiaohan0120.github.io/blob/main/img/in-post/limosine/lyric2.png)
 
 ### 感触
 
-前两天看安迪视频的解说，说在瑞克姥爷的心中有三种境界。
+从旋律一开始就很抓我，看了歌词更是被深深感动。
 
-* 境界一：错以为自己拥有自由意识
-        “以为想吃冰淇淋是因为自己想要吃，想打游戏是因为自己想要打，殊不知都是因为背后事物的诱人，引诱自己去做，而非真正的自由意识”
-* 境界二：知道自己不拥有自由意识，转为追求自由意识
-        “幻化为没有实体的能量体，只讲究逻辑不考虑结果，因为我想救你，所以我就去救，救不了就走，丝毫不留恋。”
-* 境界三：无任何前提地追求自己想做的事
-        “我去冒险是因为我想去，并不因为冒险有趣或因为冒险舒适，只是想做了，便做了。”
+从o宝看到小麦的影子，6年了，曾经的傻乎乎的平头小子也成为了另一个平头小子的导师，这就是以身作则的励志课吧。
 
-小时候以为自己独一无二，以为自己勇者无敌，长大后一遍又一遍的被生活打击，才明白自己只不过是个普通人而已。
+为每一个为梦想挥洒汗水的人的坚持所赞叹！
 
-但我不想做普通的事情，越来越觉得自己收到的束缚太多，都是来自内心的束缚，来自于太在意别人的看法。
+### 给自己
 
-我现在还不能理解或者说体会，究竟是怎么样的心境才可以不在乎别人的看法。希望有一天自己修炼成功来，可以来这里交流交流心得。
+愿自己的每一份坚持都会在未来回馈你最好的结果。
 
-### 最后
-
-今天就到这里吧，just get schwifty ~~~
+三四月做的事，七八月自有答案。
