--- a/_posts/Music/2021-11-28-Music-豪华轿车.markdown
+++ b/_posts/Music/2021-11-28-Music-豪华轿车.markdown
@@ -26,9 +26,11 @@ width=600>
 
 ### 歌词摘录
 
-![](https://github.com/Yangxiaohan0120/Yangxiaohan0120.github.io/blob/main/img/in-post/limosine/lyric1.png)
-![](https://github.com/Yangxiaohan0120/Yangxiaohan0120.github.io/blob/main/img/in-post/limosine/lyric2.png)
+>看着黑色的豪华轿车，<br>梦想开始萌芽，<br>总有一天我会得到那个东西的，<br>我从超豪华的轿车上下来，<br>变得并不是我，<br>而是人生的重量。
+<br>
 
+
+> 无论再怎么想挣脱，<br>都无法挣脱贫苦，<br>于是站起来，<br>再一次走下去，<br>如今我的努力与回报成了正比，<br>渴望成功的我，<br>最终迎来了人生的胜利。
 
 ### 感触
 
