--- a/_posts/Movies/2021-11-29-Movie-扬名立万.markdown
+++ b/_posts/Movies/2021-11-29-Movie-扬名立万.markdown
@@ -17,15 +17,15 @@ tags:
 
 ## 推荐指数
 
-:star2: :star2: :star2: :star2: :star2:
+⭐⭐⭐⭐⭐ 
 
 ## 引子
 
 这个周末去看了刘循子墨的电影《扬名立万》，看完只想说，太厉害了。
 
-喜剧性：:star2::star2::star2::star2: <br>
-推理性：:star2::star2::star2: <br>
-演绎性：:star2::star2::star2::star2::star2: <br>
+喜剧性：⭐⭐⭐⭐  <br>
+推理性：⭐⭐⭐  <br>
+演绎性：⭐⭐⭐⭐⭐  <br>
 
 先说总结，这个可能不是最完美的推理剧，可能也不是最完美的喜剧，但是对于当前的中国电影市场，也可以算作是一份非常满意的答卷了。
 
