--- a/_rmd/2022-02-07-Learning-Base r 中的一些基本操作.Rmd
+++ b/_rmd/2022-02-07-Learning-Base r 中的一些基本操作.Rmd
@@ -7,6 +7,7 @@ author:     "Xiaohan"
 header-img: "img/code001.jpg"
 category: Learning
 catalog: true
+status: process
 tags:
     - Binary search
     - 数据结构
