--- a/_rmd/2022-02-07-Learning-Base r 中的一些基本操作.Rmd
+++ b/_rmd/2022-02-07-Learning-Base r 中的一些基本操作.Rmd
@@ -1,7 +1,7 @@
 ---
 layout:     post
 title:      "R codebase（一）基本操作"
-subtitle:   "base R"
+subtitle:   "base R 的基本数据类型与处理"
 date:       2022-02-07 10:31
 author:     "Xiaohan"
 header-img: "img/code001.jpg"
