--- a/_rmd/2022-02-08-Learning-R codebase (三) 基础作图与ggplot2.Rmd
+++ b/_rmd/2022-02-08-Learning-R codebase (三) 基础作图与ggplot2.Rmd
@@ -10,3 +10,37 @@ catalog: true
 tags:
     - R codebase
 ---
+## 一、base R 基础作图
+
+### 图形创建
+
+#### 1.图形的创建
+
+#### 2.添加线条
+
+#### 3.增加绘图窗口
+
+#### 4.增加一条曲线
+
+> 多项式回归
+
+#### 5.添加点
+
+#### 6.添加图例
+
+#### 7.添加文字
+
+#### 8.精确定位
+
+#### 9.图形保存
+
+### 图形定制
+
+#### 1.字符大小
+
+#### 2.坐标轴范围
+
+#### 3.
+
+
+
