--- a/_rmd/2022-02-08-Learning-R codebase (三) 基础作图与ggplot2.Rmd
+++ b/_rmd/2022-02-08-Learning-R codebase (三) 基础作图与ggplot2.Rmd
@@ -10,6 +10,16 @@ catalog: true
 tags:
     - R codebase
 ---
+
+> 段首语
+
+此系列文章用来做R语言的学习，以及对于使用R语言进行数据处理和作图的代码汇总，方便大家随时进行查找、使用。
+
+上一篇：[R codebase (二) 数据转换](https://yangxiaohan0120.github.io/learning/2022/02/07/Learning-R-codebase-(二)-数据转换)
+
+下一篇：[R codebase (三) 基础作图与ggplot2](https://yangxiaohan0120.github.io/learning/2022/02/07/Learning-R-codebase-(三)-基础作图与ggplot2)
+
+
 ## 一、base R 基础作图
 
 ### 图形创建
