--- a/_rmd/2022-02-07-Learning-R codebase (一) 基本操作.Rmd
+++ b/_rmd/2022-02-07-Learning-R codebase (一) 基本操作.Rmd
@@ -387,6 +387,7 @@ acast(aqm, month ~ variable, mean, margins = TRUE)
 dcast(aqm, month ~ variable, mean, margins = c("month", "variable"))
 ```
 
+> 持续更新 。。。
 
 
 
