--- a/_rmd/2022-02-08-Learning-R codebase (三) 基础作图与ggplot2.Rmd
+++ b/_rmd/2022-02-08-Learning-R codebase (三) 基础作图与ggplot2.Rmd
@@ -17,7 +17,7 @@ tags:
 
 上一篇：[R codebase (二) 数据转换](https://yangxiaohan0120.github.io/learning/2022/02/07/Learning-R-codebase-(二)-数据转换)
 
-下一篇：[R codebase (三) 基础作图与ggplot2](https://yangxiaohan0120.github.io/learning/2022/02/07/Learning-R-codebase-(三)-基础作图与ggplot2)
+下一篇：[R codebase (四) 基本数据分析](https://yangxiaohan0120.github.io/learning/2022/02/07/Learning-R-codebase-(四)-基本数据分析)
 
 
 ## 一、base R 基础作图
@@ -53,4 +53,4 @@ tags:
 #### 3.
 
 
-
+> 持续更新 。。。
