--- a/_rmd/2022-02-08-Learning-R codebase (三) 基础作图与ggplot2.Rmd
+++ b/_rmd/2022-02-08-Learning-R codebase (三) 基础作图与ggplot2.Rmd
@@ -26,6 +26,102 @@ tags:
 
 #### 1.图形的创建
 
+* 颜色准备
+
+```{r,eval=TRUE,collapse=TRUE}
+library(RColorBrewer)
+```
+
+* 直方图 histogram
+```{r,eval=T,collapse=T,fig.asp = 0.618,fig.align='center'}
+data(VADeaths) 
+hist(VADeaths,breaks=10, col=brewer.pal(3,"Set3"),main="Set3 3 colors")
+```
+
+* 线性图 line chart
+
+```{r,eval=TRUE,collapse=TRUE,fig.asp = 0.618,fig.align='center'}
+plot(AirPassengers,type="l")
+```
+
+* 柱状图 bar chart
+
+```{r,eval=TRUE,collapse=TRUE,fig.asp = 0.618,fig.align='center'}
+barplot(iris$Petal.Length) #Creating simple Bar Graph 
+barplot(table(iris$Species,iris$Sepal.Length),col = brewer.pal(3,"Set1"))
+```
+
+* 盒形图 boxplot
+
+```{r,eval=TRUE,collapse=TRUE,fig.asp = 0.618,fig.align='center'}
+data(iris) 
+boxplot(iris$Sepal.Length,col="red")
+boxplot(iris$Sepal.Length~iris$Species,col=topo.colors(3,alpha = 0.8))
+
+```
+
+* 散点图
+
+```{r,eval=TRUE,collapse=TRUE,fig.asp = 0.618,fig.align='center'}
+plot(x=iris$Petal.Length) 
+plot(x=iris$Petal.Length,y=iris$Species)
+plot(iris,col=brewer.pal(3,"Set1"))
+```
+
+* 六边形密度图 Hexbin Binning
+
+```{r,eval=TRUE,collapse=TRUE,fig.asp = 0.618,fig.align='center'}
+library(hexbin)
+library(ggplot2)
+diamonds <- diamonds
+a=hexbin(diamonds$price,diamonds$carat,xbins=40)
+plot(a)
+rf <- colorRampPalette(rev(brewer.pal(40,'Set3')))
+hexbinplot(diamonds$price~diamonds$carat, data=diamonds, colramp=rf)
+```
+
+*马赛克图（Mosaic Plot），也叫做不等宽柱状图(Marimekko Chart)
+
+```{r,eval=TRUE,collapse=TRUE,fig.asp = 0.618,fig.align='center'}
+data(HairEyeColor)
+mosaicplot(HairEyeColor)
+```
+
+* 热图
+
+```{r,eval=TRUE,collapse=TRUE,fig.asp = 0.618,fig.align='center'}
+head(mtcars)
+heatmap(as.matrix(mtcars))
+```
+* 地图 Map
+```{r,eval=TRUE,collapse=TRUE,fig.asp = 0.618,fig.align='center'}
+## devtools::install_github("rstudio/leaflet")
+library(magrittr) 
+library(leaflet)
+m <- leaflet() %>% 
+  addTiles() %>% # Add default OpenStreetMap map tiles 
+  addMarkers(lng=77.2310, lat=28.6560, popup="food of chandni chowk")
+m
+```
+
+* 3D
+```{r,eval=TRUE,collapse=TRUE,fig.asp = 0.618,fig.align='center',warning=FALSE}
+data(iris, package="datasets")
+library(car)
+scatter3d(Petal.Width~Petal.Length+Sepal.Length|Species, data=iris, fit="linear",residuals=TRUE, parallel=FALSE, bg="black", axis.scales=TRUE, grid=TRUE, ellipsoid=FALSE)
+
+library(lattice)
+attach(iris)# 3d scatterplot by factor level
+  cloud(Sepal.Length~Sepal.Width*Petal.Length|Species, main="3D Scatterplot by Species")
+  xyplot(Sepal.Width ~ Sepal.Length, iris, groups = iris$Species, pch= 20)
+```
+* 相关性图 Correlogram (GUIs)
+```{r,eval=TRUE,collapse=TRUE,fig.asp = 0.618,fig.align='center'}
+cor(iris[1:4])
+library(corrgram)
+corrgram(iris)
+```
+
 #### 2.添加线条
 
 #### 3.增加绘图窗口
@@ -46,11 +142,61 @@ tags:
 
 ### 图形定制
 
-#### 1.字符大小
+#### 1.字符、文本
 
-#### 2.坐标轴范围
+#### 2.符号和线条
 
-#### 3.
+#### 3.颜色
 
+#### 4.图形尺寸和边界尺寸
+
+#### 5.标题
+
+#### 6.坐标轴
+
+#### 7.参考线
+
+#### 8.图例
+
+#### 9.添加多边形
+
+#### 10.平滑散点
+
+#### 11.绘制显式表达式的函数
+
+* 放大曲线的一部分
+
+#### 12.文本标注
+
+#### 13.数学标注
+
+#### 14.图形的组合
+
+### 三维图形
+
+
+## 二、ggplot2作图
+
+### 基本图类型
+
+### 分组
+
+### 刻面
+
+### 添加光滑曲线
+
+### 外观修改
+
+#### 1.坐标轴
+
+#### 2.图例
+
+#### 3.标尺
+
+#### 4.主题
+
+#### 5.多重图
+
+### 图形保存
 
 > 持续更新 。。。
