--- a/_rmd/2022-02-08-Learning-R codebase (三) 基础作图与ggplot2.Rmd
+++ b/_rmd/2022-02-08-Learning-R codebase (三) 基础作图与ggplot2.Rmd
@@ -2,7 +2,7 @@
 layout:     post
 title:      "R codebase（三）基础作图与ggplot2"
 subtitle:   "使用R处理数据的转换"
-date:       2022-02-07 22:31
+date:       2022-02-09 22:31
 author:     "Xiaohan"
 header-img: "img/Rscripts.jpg"
 category: Learning
@@ -23,8 +23,6 @@ tags:
 ## 一、base R 基础作图
 
 ### 图形创建
-
-#### 1.图形的创建
 
 * 颜色准备
 
@@ -108,7 +106,7 @@ m
 ```{r,eval=TRUE,collapse=TRUE,fig.asp = 0.618,fig.align='center',warning=FALSE}
 data(iris, package="datasets")
 library(car)
-scatter3d(Petal.Width~Petal.Length+Sepal.Length|Species, data=iris, fit="linear",residuals=TRUE, parallel=FALSE, bg="black", axis.scales=TRUE, grid=TRUE, ellipsoid=FALSE)
+# scatter3d(Petal.Width~Petal.Length+Sepal.Length|Species, data=iris, fit="linear",residuals=TRUE, parallel=FALSE, bg="black", axis.scales=TRUE, grid=TRUE, ellipsoid=FALSE)
 
 library(lattice)
 attach(iris)# 3d scatterplot by factor level
@@ -122,58 +120,282 @@ library(corrgram)
 corrgram(iris)
 ```
 
-#### 2.添加线条
-
-#### 3.增加绘图窗口
-
-#### 4.增加一条曲线
-
-* 多项式回归
-
-#### 5.添加点
-
-#### 6.添加图例
-
-#### 7.添加文字
-
-#### 8.精确定位
-
-#### 9.图形保存
-
 ### 图形定制
 
 #### 1.字符、文本
 
+* 文字大小
+
+|参数|描述|
+|:---|:---|
+|cex|相对于默认大小的缩放倍数|
+|cex.axis|坐标轴刻度文字的缩放倍数|
+|cex.lab|坐标轴标签的缩放倍数|
+|cex.main|标题的缩放倍数|
+|cex.sub|副标题的缩放倍数|
+
+* 文字字体
+
+|参数|描述|
+|:---|:---|
+|font|用于指定绘图所用的字体样式。1=常规，2=粗体，3=斜体，4=粗斜体，5=符号字体（以Adobe符号编码表示）|
+|font.axis|坐标轴刻度字体样式|
+|font.lab|坐标轴标签字体样式|
+|font.main|标题的字体样式|
+|font.sub|副标题的字体样式|
+|ps|字体磅值，文本的最终大小为ps*cex|
+|family|绘制文本时使用的字体族，serif(衬线),sans(无衬线),mono(等宽)|
+
 #### 2.符号和线条
+
+|参数|描述|
+|:---|:---|
+|pch|符号类型|
+|cex|符号大小|
+|lty|线条类型|
+|lwd|线条宽度|
+
+![](/Users/yxh/PycharmProjects/Yangxiaohan0120.github.io/figure/Rplot/1.png)
+![](/Users/yxh/PycharmProjects/Yangxiaohan0120.github.io/figure/Rplot/2.png)
+```{r,eval=T,collapse=T,fig.asp = 0.618,fig.align='center'}
+dose <- c(20,30,40,50,60)
+drugA <- c(16,20,28,40,60)
+plot(dose,drugA,type = "b",lty=3,lwd=3,pch=15,cex=2)
+```
 
 #### 3.颜色
 
+|参数|描述|
+|:---|:---|
+|col|默认绘图颜色|
+|col.axis|坐标轴刻度文字颜色|
+|col.lab|坐标轴标签文字颜色|
+|col.main|标题颜色|
+|col.sub|副标题颜色|
+|fg|图形的前景色|
+|bg|图形的后景色|
+
+* 使用颜色下标、名称，十六进制、RGB、或者HSV表示
+
+col=1,col="white",col=#FFFFFF".col=rgb(1,1,1)和col=hsv(0,0,1)
+
+* 函数
+
+```{r,eval=T,collapse=T}
+## colors() 可返回所有可用的颜色名称
+head(colors())
+
+rainbow(10)
+
+heat.colors(10)
+
+terrain.colors(10)
+
+topo.colors(10)
+
+cm.colors(10)
+```
+
+* R 包
+
+RColorBrewer
+
+```{r,eval=T,collapse=T}
+library(RColorBrewer)
+brewer.pal.info ## 展示所有颜色
+display.brewer.all() ## 打开调色板
+mycolor <- brewer.pal(5,"Set1") ## 调用颜色
+mycolor
+```
+
 #### 4.图形尺寸和边界尺寸
+
+|参数|描述|
+|:----|:-----|
+|pin|以英寸表示图形尺寸|
+|mai|以数值向量表示边界大小，“下，左，上，右”，单位英寸|
+|mar|以数值向量表示边界大小，“下，左，上，右”，单位英分|
 
 #### 5.标题
 
+title()
+
+```{r,eval=F}
+title(main="main title",sub= "sub title",xlab = "x-axis lable",ylab = "y-axis lable")
+```
+
 #### 6.坐标轴
+
+axis()
+
+```{r,eval=F}
+axis(side,at = ,labels = ,pos = ,lty = ,col = ,Las=,tck=, ……)
+```
+
+|||
+|:---|:---|
+|side|整数，表示绘制坐标轴的位置（1=下，2=左，3=上，4=右）|
+|at|数值型向量，表示需要绘制刻度线的位置|
+|labels|字符型向量，表示置于刻度线旁边的文字标签,(如果为Null，则默认使用at()中的值|
+|pos|坐标轴线绘制位置的坐标(相交点的坐标)｜
+|lty|线条类型|
+|col|线条颜色与刻度线颜色|
+|las|标签是否平行于（=0）或垂直于（=2）坐标轴（标签值较长的情况）|
+|tck|刻度线长度，负数为外侧，正数为内侧，0表示禁用，1表示绘制网格线，默认-0.01|
+|xlim|x轴的范围|
+|ylim|y轴的范围|
+
+axes=FALSE 禁用坐标轴， yaxt="n",xaxt="n" 分别禁用y轴和x轴
+
+```{r,eval=T,collapse=F}
+## 举例
+
+x <- c(1:10)
+y <- x
+z <- 10/x
+opar <- par(no.readonly = T)
+
+par(mar=c(5,4,4,8)+0.1)
+plot(x,y,type="b",pch=21,col="red",yaxt="n",lty=3,ann=FALSE)
+lines(x,z,type="b",pch=22,col="blue",lty=2)
+axis(2,at=x,labels = x,col.axis="red",las=2)
+axis(4,at=z,labels = round(z,digits = 2),col.axis="blue",las=2,cex.axis=0.7,tck=-0.01)
+mtext("y=1/x",side=4,line=3,cex.lab=1,las=2,col="blue")
+title("An Example of Creative Axes",xlab = "X Values",ylab = "Y = X")
+
+par(opar)
+
+```
 
 #### 7.参考线
 
+abline(h=yvalues,v=xvalues)为图形添加参考线
+
+```{r,eval=T,collapse=T}
+plot(x,y,type="b",pch=21,col="red",lty=3)
+abline(h=c(1.5,7))
+abline(v=seq(1,10,2),lty=2,col="blue")
+```
+
 #### 8.图例
 
-#### 9.添加多边形
+legend(location,title,legend,...)
 
-#### 10.平滑散点
+|选项|描述|
+|:---|:---|
+|location|1，指定坐标；2，使用关键字（bottom，topright 等），可同时使用inset=指定向图形内侧移动的大小|
+|title|标题|
+|legend|标签|
 
-#### 11.绘制显式表达式的函数
+![](/Users/yxh/PycharmProjects/Yangxiaohan0120.github.io/figure/Rplot/3.png)
+![](/Users/yxh/PycharmProjects/Yangxiaohan0120.github.io/figure/Rplot/4.png)
 
-* 放大曲线的一部分
+#### 9.文本标注
 
-#### 12.文本标注
+text(location,"text to place",pos,...)
+mtext("text to place",side,line=n,...)
 
-#### 13.数学标注
+|选项|描述|
+|:---|:---|
+|location|文本位置|
+|pos|相对于位置的方位，1=下，2=左，3=上，4=右，使用offset=指定偏移量|
+|side|文本的边，lines=内移或外移文本，adj=0文本左下对齐，adj=1右上对齐|
 
-#### 14.图形的组合
+```{r,eval=T}
+attach(mtcars)
+plot(wt,mpg,
+     main = "Mileage vs,. Car weight",
+     xlab = "Weight",ylab = "Mileage",
+     pch=18,col="blue")
+text(wt,mpg,
+     row.names(mtcars),
+     cex=0.6,pos=4,col = "red")
+detach(mtcars)
+```
 
-### 三维图形
+#### 10.数学标注
 
+plotmath()添加数学符号
+
+![](/Users/yxh/PycharmProjects/Yangxiaohan0120.github.io/figure/Rplot/5.png)
+
+![](/Users/yxh/PycharmProjects/Yangxiaohan0120.github.io/figure/Rplot/6.png)
+
+![](/Users/yxh/PycharmProjects/Yangxiaohan0120.github.io/figure/Rplot/7.png)
+
+![](/Users/yxh/PycharmProjects/Yangxiaohan0120.github.io/figure/Rplot/8.png)
+
+![](/Users/yxh/PycharmProjects/Yangxiaohan0120.github.io/figure/Rplot/9.png)
+
+#### 11.图形的组合
+
+* par()
+
+使用参数mfrow=c(nrows,ncols) or mfcol=c(nrows,ncols)
+
+```{r,eval=T}
+attach(mtcars)
+opar <- par(no.readonly = T)
+par(mfrow=c(3,1))
+hist(wt)
+hist(mpg)
+hist(disp)
+par(opar)
+detach(mtcars)
+```
+
+* layout()
+
+layout(mat),使用mat指定图形位置（所在行）
+
+```{r,eval=T}
+attach(mtcars)
+layout(matrix(c(1,1,2,3),2,2,byrow = T))
+hist(wt)
+hist(disp)
+hist(mpg)
+detach(mtcars)
+```
+
+
+#### 12.添加多边形
+
+polygon()
+
+```{r,eval=T}
+f <- function(x) return(1-exp(-x))
+curve(f,0,2)
+polygon(c(1.2,1.4,1.4,1.2),c(0,0,f(1.3),f(1.3)),col = "gray")
+```
+
+#### 12.平滑散点
+
+lowess() 与 loess() 函数
+
+```{r,eval=T,collapse=F}
+datatest <- data.frame(x=mtcars$mpg,y=mtcars$disp)
+plot(datatest)+
+lines(lowess(datatest))
+```
+
+#### 13.绘制显式表达式的函数
+
+对于具有一定函数关系的曲线图的绘制
+
+1、将其中的数抽样进行plot
+
+```{r,eval=T,collapse=F}
+g <- function(t) {return (t^2+1)^0.5 }
+x <- seq(0,5,length=10000)
+y <- g(x)
+plot(x,y,type="l")
+```
+
+2、直接绘制函数图像（add=T，在原有图形上添加）
+
+```{r,eval=T}
+curve((x^2+1)^0.5,0,5)
+```
 
 ## 二、ggplot2作图
 
