--- a/_rmd/2022-02-08-Learning-R codebase (三) 基础作图与ggplot2.Rmd
+++ b/_rmd/2022-02-08-Learning-R codebase (三) 基础作图与ggplot2.Rmd
@@ -619,8 +619,8 @@ l + geom_tile(aes(fill = z))
 
 ### 统计（stats）
 
-<GGPLOT> + <STATFUNCTION>(aes(<GEOMMAPPING> = <VARIABLE>),geom = <GEOM_FUNCTION>)
-i + stat_density2d(aes(fill = level),geom = "polygon")
+> <GGPLOT> + <STATFUNCTION>(aes(<GEOMMAPPING> = <VARIABLE>),geom = <GEOM_FUNCTION>)
+> i + stat_density2d(aes(fill = level),geom = "polygon")
 
 ```{r,eval=T,collapse=T}
 ##数据准备
