--- a/_rmd/2022-02-08-Learning-R codebase (三) 基础作图与ggplot2.Rmd
+++ b/_rmd/2022-02-08-Learning-R codebase (三) 基础作图与ggplot2.Rmd
@@ -764,7 +764,7 @@ e + stat_unique()
 
 * 组成结构
 
-<scale>_<aesthetic to adjust>_<prepackaged scale to use>(
+scale_aesthetic to adjust_prepackaged scale to use(
     values,limits,breaks,name,labels
 )
 
