--- a/_posts/Learning/2022-05-30-Learning-使用双指针解决环形链表问题.md
+++ b/_posts/Learning/2022-05-30-Learning-使用双指针解决环形链表问题.md
@@ -16,7 +16,7 @@ tags:
 
 ## 题目
 
-![Untitled](https://s3-us-west-2.amazonaws.com/secure.notion-static.com/99c0865c-ab56-4421-8b9a-01b19b4f7e61/Untitled.png)
+![Untitled](https://raw.githubusercontent.com/Yangxiaohan0120/Yangxiaohan0120.github.io/main/img/in-post/twopointers/1.png)
 
 给定一个链表的头节点  head ，返回链表开始入环的第一个节点。 如果链表无环，则返回 null。
 
@@ -45,7 +45,7 @@ public ListNode detectCycle(ListNode head) {
 }
 ```
 
-![Untitled](https://s3-us-west-2.amazonaws.com/secure.notion-static.com/318d2663-4b27-4a03-b005-7c4d88910f52/Untitled.png)
+![Untitled](https://raw.githubusercontent.com/Yangxiaohan0120/Yangxiaohan0120.github.io/main/img/in-post/twopointers/2.png)
 
 
 但是一看结果才打败了20%的速度，显然还有更巧妙的方法，那么就是双指针了
@@ -81,7 +81,7 @@ public ListNode detectCycle1(ListNode head) {
 }
 ```
 
-![Untitled](https://s3-us-west-2.amazonaws.com/secure.notion-static.com/67a0eff3-04b5-4502-813a-a8c8d34a1b29/Untitled.png)
+![Untitled](https://raw.githubusercontent.com/Yangxiaohan0120/Yangxiaohan0120.github.io/main/img/in-post/twopointers/3.png)
 
 条件一：fast是slow速度的两倍，找到一个定点B
 
@@ -89,7 +89,7 @@ public ListNode detectCycle1(ListNode head) {
 
 那么使用小学加减法就可以知道 2x - x = 1 cycle，slow的路程也是一个cycle的长度，即OAB = 1 cycle
 
-![Untitled](https://s3-us-west-2.amazonaws.com/secure.notion-static.com/8591160b-e1f7-4001-98b7-bf7b3a7a9622/Untitled.png)
+![Untitled](https://raw.githubusercontent.com/Yangxiaohan0120/Yangxiaohan0120.github.io/main/img/in-post/twopointers/4.png)
 
 因此第二段程序，我们将中间重叠的部分擦去
 
@@ -97,7 +97,7 @@ public ListNode detectCycle1(ListNode head) {
 
 所以再以同样的速度前进就可以在开始的节点相交：A
 
-![Untitled](https://s3-us-west-2.amazonaws.com/secure.notion-static.com/afcc4bcb-37ff-4e75-a9be-c5d612c116d6/Untitled.png)
+![Untitled](https://raw.githubusercontent.com/Yangxiaohan0120/Yangxiaohan0120.github.io/main/img/in-post/twopointers/5.png)
 
 大功告成！！完美
 
