--- a/_posts/Learning/2022-06-01-Learning-链表重排序问题的解决之道.md
+++ b/_posts/Learning/2022-06-01-Learning-链表重排序问题的解决之道.md
@@ -1,7 +1,7 @@
 ---
 layout:     post 
-title:      "使用双指针快速解决环形链表问题"
-subtitle:   "双指针的用法"
+title:      "链表重排的解决之道"
+subtitle:   "逆转链表"
 date:       2022-06-01 10:00
 author:     "Xiaohan"
 header-img: "img/post-twopointers-linkedlist.jpg"
